[package]
name = "rustpython-derive-impl"
description = "Rust language extensions and macros specific to rustpython."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustpython-compiler-core = { workspace = true }
# rustpython-parser-core = { workspace = true }
rustpython-doc = { workspace = true }

itertools = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

maplit = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn-ext = { workspace = true, features = ["full"] }
textwrap = { workspace = true, default-features = false }

[lints]
workspace = true
