[package]
name = "rustpython-doc"
description = "Python __doc__ database for RustPython"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file = "LICENSE"

[dependencies]
phf = { workspace = true }

[lib]
doctest = false # Crashes when true

[lints]
workspace = true
