[package]
name = "rustpython-jit"
description = "Experimental JIT(just in time) compiler for python code."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

autotests = false

[dependencies]
rustpython-compiler-core = { workspace = true }

num-traits = { workspace = true }
thiserror = { workspace = true }
libffi = { workspace = true }

cranelift = "0.127"
cranelift-jit = "0.127"
cranelift-module = "0.127"

[dev-dependencies]
rustpython-derive = { workspace = true }
rustpython-wtf8 = { workspace = true }

approx = "0.5.1"

[[test]]
name = "integration"
path = "tests/lib.rs"

[lints]
workspace = true
