[package]
name = "rustpython-literal"
description = "Common literal handling utilities mostly useful for unparse and repr."
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rustpython-unicode = { workspace = true, default-features = false }
rustpython-wtf8 = { workspace = true }

hexf-parse = "0.2.1"
is-macro.workspace = true
lexical-parse-float = { version = "1.0.6", features = ["format"] }
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
