[package]
name = "rustpython-module_pyo3"
description = "RustPython pyo3 module - bridge to CPython via PyO3"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustpython-vm = { workspace = true }
rustpython-derive = { workspace = true }
pyo3 = { version = "0.26", features = ["auto-initialize"] }
crossbeam-utils = { workspace = true }

[lints]
workspace = true
